[gd_scene load_steps=5 format=2]

[ext_resource path="res://Terminator.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 370, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 370, 34 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 370, 52 )

[node name="Terminator" type="ColorRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 53.0
margin_bottom = 59.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerfectArea" type="Area2D" parent="."]
position = Vector2( 515, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerfectArea"]
shape = SubResource( 1 )

[node name="GoodArea" type="Area2D" parent="."]
position = Vector2( 515, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodArea"]
shape = SubResource( 2 )

[node name="OkayArea" type="Area2D" parent="."]
position = Vector2( 515, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OkayArea"]
shape = SubResource( 3 )

[connection signal="area_entered" from="PerfectArea" to="." method="_on_PerfectArea_area_entered"]
[connection signal="area_exited" from="PerfectArea" to="." method="_on_PerfectArea_area_exited"]
[connection signal="area_entered" from="GoodArea" to="." method="_on_GoodArea_area_entered"]
[connection signal="area_exited" from="GoodArea" to="." method="_on_GoodArea_area_exited"]
[connection signal="area_entered" from="OkayArea" to="." method="_on_OkayArea_area_entered"]
[connection signal="area_exited" from="OkayArea" to="." method="_on_OkayArea_area_exited"]
